Revision history for {{$dist->name}}

{{$NEXT}}
    - we now issue a warning if running when neither AUTHOR_TESTING or
      RELEASE_TESTING environment variables or set

1.09      2013-07-18 10:34:33 PDT-0700 (Karen Etheridge)
    - the has_test_pod, has_test_pod_coverage tests have been removed - they
      are classified as 'extra', and have been largely considered to be a bad
      idea anyway (these are often shipped as, and ought to be, in xt/)
    - the extractable test has been removed, as it does nothing in dists
      before there is a tarball present
    - new tests have been added: all standard kwalitee tests that can be run
      on a bare distribution without a tarball

1.08      2013-07-15 17:59:47 PDT-0700 (Karen Etheridge)
    - documentation fixed to reflect what indicators are actually available
    - metric names are no longer hardcoded, so Module::CPANTS::Analyse has
      more freedom to add and remove metrics

1.07      2013-06-28 12:22:00 PDT-0700 (Karen Etheridge)
    - now the indicators are run in the exact order they are returned
      from Module::CPANTS::Kwalitee::*, as some tests depend on the results of
      earlier tests (charsbar)
    - synopsis updated to recommend a better way to run this module, ensuring
      that it is not run by cpantesters or at installation time
    - we no longer create a function in our namespace for every metric we are
      going to test -- this should not break anyone, as these subs were never
      documented as part of the public API

1.06      2013-05-13 14:15:33 PDT-0700 (Karen Etheridge)
    - restore previous behaviour of plan()ing in import, to unbreak some
      dists that didn't follow the docs (which in this case is ok since it's a
      horrible idea for a Test module to plan itself anyway) (v1.05)
    - more diagnostic data is printed when a test fails (RT#85107)

1.05      2013-05-12 17:17:32 PDT-0700 (Karen Etheridge)