@@ -28,7 +28,7 @@ check_tests(
     [ map {
             +{
                 name => $_,
-                depth => 2,
+                depth => 1,
                 ok => 1,
                 actual_ok => 1,
                 type => '',
